# dyno

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE.md  README.md  build.sh  conanfile.py  conanfile.txt  cppdock.json  dependencies.cmake  hoisted.local.slower.s  hoisted.remote.faster.s
benchmark/: CMakeLists.txt  any_iterator.cpp  handrolled_iterator.cpp  n_functions.cpp  n_functions.hoisted.cpp  n_functions.in_loop.cpp  storage.cpp  storage.swap.different_types.cpp  storage.swap.same_type.cpp  vtables.hpp
benchmark/any_iterator/: any_iterator.cpp  boost_type_erasure.hpp  boost_variant.hpp  dyno_generic.hpp  handrolled_remote_storage.hpp  handrolled_sean.hpp  handrolled_vtable.hpp  mpark_variant.hpp  sean.hpp
benchmark/storage/: ctor.copy.cpp  ctor.cpp  ctor.move.cpp  dispatch.many.cpp  dispatch.single.cpp  model.hpp  swap.different.cpp  swap.same.cpp
benchmark/vtable/: dispatch.2.cpp  dispatch.3.cpp  dispatch.4.cpp  model.hpp
cmake/: CompileFailTest.cmake  dependencies.cmake  dyno-config.cmake
dependencies/: CMakeLists.txt  install.sh
example/: CMakeLists.txt  any_iterator.cpp  any_iterator.hpp  any_range.cpp  codegen.any_iterator.cpp  codegen.handrolled_iterator.cpp  codegen.vector_iterator.cpp  drawable.cpp  drawable.dyno.cpp  drawable.sean.cpp  drawable.te.cpp  function.cpp  function.devirtualize.cpp  overview.cpp  overview.macro.cpp  readme.cpp  readme.non_member.cpp  vtable_traits.cpp  worksheet.cpp
include/: dyno.hpp  te.hpp
include/dyno/: builtin.hpp  concept.hpp  concept_map.hpp  interface_macro.hpp  macro.hpp  poly.hpp  storage.hpp  vtable.hpp
include/dyno/detail/: bind_signature.hpp  dsl.hpp  empty_object.hpp  erase_function.hpp  erase_signature.hpp  eraser_traits.hpp  has_duplicates.hpp  interface_macro.hpp.erb  is_placeholder.hpp  macro.hpp.erb  preprocessor.hpp  transform_signature.hpp
include/dyno/experimental/: switch_vtable.hpp  unrolled_vtable.hpp  vtable.hpp
include/te/: builtin.hpp  concept.hpp  concept_map.hpp  dsl.hpp  poly.hpp  storage.hpp  vtable.hpp
include/te/detail/: bind_signature.hpp  dsl.hpp  empty_object.hpp  erase_function.hpp  erase_signature.hpp  eraser_traits.hpp  function_cast.hpp  is_placeholder.hpp  small_pointer.hpp  transform_signature.hpp
include/te/experimental/: classic_poly.hpp  collocated_poly.hpp  unrolled_vtable.hpp  vtable.hpp
test/: CMakeLists.txt  builtin.models.cpp  concept.clause_names.cpp  concept.clauses.cpp  concept.cpp  concept.duplicate.cpp  concept.duplicate.fail.direct.cpp  concept.duplicate.fail.redefine.1.cpp  concept.duplicate.fail.redefine.2.cpp  concept.refined.cpp  concept_map.cpp  concept_map.ctor.default.cpp  concept_map.duplicate.fail.cpp  concept_map.fail.1.cpp  concept_map.fail.2.cpp  concept_map.fail.3.cpp  concept_map.invalid_default.cpp  concept_map.models.cpp  concept_map.partial_default.cpp  concept_map.partial_override.cpp  interface_macro.cpp  interface_macro.overload.cpp  macro.cpp  poly.allocator.cpp  poly.copy.recursion.cpp  poly.cpp  poly.ctor.copy.cpp  poly.ctor.implicit.cpp  poly.ctor.implicit.double_wrap.cpp  poly.ctor.map.cpp  poly.ctor.temp.non_owning_storage.fail.cpp  poly.deref.cpp  poly.deref.fail.cpp  poly.non_owning_storage.trivial.cpp  poly.remote.size.cpp  poly.unsafe_get.cpp  poly.virtual.cpp  poly.virtual.fail.1.cpp  poly.virtual.fail.2.cpp  poly.virtual.fail.3.cpp  (+13 more)
test/deploy/: CMakeLists.txt  main.cpp
test/detail/: bind_signature.cpp  dsl.make_string.cpp  empty_object.cpp  erase_function.cpp  erase_function.fail.1.cpp  erase_function.fail.2.cpp  erase_function.move.cpp  erase_function.value.cpp  erase_signature.cpp  erase_signature.fail.1.cpp  erase_signature.fail.2.cpp  eraser_traits.fail.1.cpp  function_cast.cpp  has_duplicates.cpp  string.cpp  transform_signature.cpp
